# cpm

./: .clang-format  .clang-tidy  .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  Taskfile.yml  install.sh  wget-log
include/cpm/: config.hpp  environment.hpp  nix_backend.hpp  nix_env.hpp  package_manager.hpp  progress.hpp  resolver.hpp  toml_parser.hpp  toolchain.hpp
pkg/: README.md  package.json
pkg/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
pkg/src/app/api/package/: route.ts
pkg/src/app/api/search/: route.ts
pkg/src/app/docs/: layout.tsx  page.tsx
pkg/src/app/package/[owner]/[repo]/: layout.tsx  page.tsx
pkg/src/components/: MarkdownRenderer.tsx  Navbar.tsx  PackageCard.tsx  SearchBar.tsx  ThemeToggle.tsx
src/: config.cpp  environment.cpp  main.cpp  nix_backend.cpp  nix_env.cpp  package_manager.cpp  progress.cpp  resolver.cpp  toml_parser.cpp  toolchain.cpp
testdir/: compile_commands.json  cpm.toml  main.cpp
testdir/src/: db.hpp  handlers.hpp
